docs/upbound-provider-gcp/1.8/certificatemanager/v1beta1/certificate.md
---
permalink: /upbound-provider-gcp/1.8/certificatemanager/v1beta1/certificate/
---

# certificatemanager.v1beta1.certificate

"Certificate is the Schema for the Certificates API. Certificate represents a HTTP-reachable backend for a Certificate."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withDescription(description)`](#fn-specforproviderwithdescription)
    * [`fn withLabels(labels)`](#fn-specforproviderwithlabels)
    * [`fn withLabelsMixin(labels)`](#fn-specforproviderwithlabelsmixin)
    * [`fn withLocation(location)`](#fn-specforproviderwithlocation)
    * [`fn withManaged(managed)`](#fn-specforproviderwithmanaged)
    * [`fn withManagedMixin(managed)`](#fn-specforproviderwithmanagedmixin)
    * [`fn withProject(project)`](#fn-specforproviderwithproject)
    * [`fn withScope(scope)`](#fn-specforproviderwithscope)
    * [`fn withSelfManaged(selfManaged)`](#fn-specforproviderwithselfmanaged)
    * [`fn withSelfManagedMixin(selfManaged)`](#fn-specforproviderwithselfmanagedmixin)
    * [`obj spec.forProvider.managed`](#obj-specforprovidermanaged)
      * [`fn withDnsAuthorizations(dnsAuthorizations)`](#fn-specforprovidermanagedwithdnsauthorizations)
      * [`fn withDnsAuthorizationsMixin(dnsAuthorizations)`](#fn-specforprovidermanagedwithdnsauthorizationsmixin)
      * [`fn withDomains(domains)`](#fn-specforprovidermanagedwithdomains)
      * [`fn withDomainsMixin(domains)`](#fn-specforprovidermanagedwithdomainsmixin)
      * [`fn withIssuanceConfig(issuanceConfig)`](#fn-specforprovidermanagedwithissuanceconfig)
    * [`obj spec.forProvider.selfManaged`](#obj-specforproviderselfmanaged)
      * [`fn withPemCertificate(pemCertificate)`](#fn-specforproviderselfmanagedwithpemcertificate)
      * [`obj spec.forProvider.selfManaged.certificatePemSecretRef`](#obj-specforproviderselfmanagedcertificatepemsecretref)
        * [`fn withKey(key)`](#fn-specforproviderselfmanagedcertificatepemsecretrefwithkey)
        * [`fn withName(name)`](#fn-specforproviderselfmanagedcertificatepemsecretrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specforproviderselfmanagedcertificatepemsecretrefwithnamespace)
      * [`obj spec.forProvider.selfManaged.pemPrivateKeySecretRef`](#obj-specforproviderselfmanagedpemprivatekeysecretref)
        * [`fn withKey(key)`](#fn-specforproviderselfmanagedpemprivatekeysecretrefwithkey)
        * [`fn withName(name)`](#fn-specforproviderselfmanagedpemprivatekeysecretrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specforproviderselfmanagedpemprivatekeysecretrefwithnamespace)
      * [`obj spec.forProvider.selfManaged.privateKeyPemSecretRef`](#obj-specforproviderselfmanagedprivatekeypemsecretref)
        * [`fn withKey(key)`](#fn-specforproviderselfmanagedprivatekeypemsecretrefwithkey)
        * [`fn withName(name)`](#fn-specforproviderselfmanagedprivatekeypemsecretrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specforproviderselfmanagedprivatekeypemsecretrefwithnamespace)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withDescription(description)`](#fn-specinitproviderwithdescription)
    * [`fn withLabels(labels)`](#fn-specinitproviderwithlabels)
    * [`fn withLabelsMixin(labels)`](#fn-specinitproviderwithlabelsmixin)
    * [`fn withManaged(managed)`](#fn-specinitproviderwithmanaged)
    * [`fn withManagedMixin(managed)`](#fn-specinitproviderwithmanagedmixin)
    * [`fn withProject(project)`](#fn-specinitproviderwithproject)
    * [`fn withScope(scope)`](#fn-specinitproviderwithscope)
    * [`fn withSelfManaged(selfManaged)`](#fn-specinitproviderwithselfmanaged)
    * [`fn withSelfManagedMixin(selfManaged)`](#fn-specinitproviderwithselfmanagedmixin)
    * [`obj spec.initProvider.managed`](#obj-specinitprovidermanaged)
      * [`fn withDnsAuthorizations(dnsAuthorizations)`](#fn-specinitprovidermanagedwithdnsauthorizations)
      * [`fn withDnsAuthorizationsMixin(dnsAuthorizations)`](#fn-specinitprovidermanagedwithdnsauthorizationsmixin)
      * [`fn withDomains(domains)`](#fn-specinitprovidermanagedwithdomains)
      * [`fn withDomainsMixin(domains)`](#fn-specinitprovidermanagedwithdomainsmixin)
      * [`fn withIssuanceConfig(issuanceConfig)`](#fn-specinitprovidermanagedwithissuanceconfig)
    * [`obj spec.initProvider.selfManaged`](#obj-specinitproviderselfmanaged)
      * [`fn withPemCertificate(pemCertificate)`](#fn-specinitproviderselfmanagedwithpemcertificate)
      * [`obj spec.initProvider.selfManaged.certificatePemSecretRef`](#obj-specinitproviderselfmanagedcertificatepemsecretref)
        * [`fn withKey(key)`](#fn-specinitproviderselfmanagedcertificatepemsecretrefwithkey)
        * [`fn withName(name)`](#fn-specinitproviderselfmanagedcertificatepemsecretrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specinitproviderselfmanagedcertificatepemsecretrefwithnamespace)
      * [`obj spec.initProvider.selfManaged.pemPrivateKeySecretRef`](#obj-specinitproviderselfmanagedpemprivatekeysecretref)
        * [`fn withKey(key)`](#fn-specinitproviderselfmanagedpemprivatekeysecretrefwithkey)
        * [`fn withName(name)`](#fn-specinitproviderselfmanagedpemprivatekeysecretrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specinitproviderselfmanagedpemprivatekeysecretrefwithnamespace)
      * [`obj spec.initProvider.selfManaged.privateKeyPemSecretRef`](#obj-specinitproviderselfmanagedprivatekeypemsecretref)
        * [`fn withKey(key)`](#fn-specinitproviderselfmanagedprivatekeypemsecretrefwithkey)
        * [`fn withName(name)`](#fn-specinitproviderselfmanagedprivatekeypemsecretrefwithname)
        * [`fn withNamespace(namespace)`](#fn-specinitproviderselfmanagedprivatekeypemsecretrefwithnamespace)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Certificate

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"CertificateSpec defines the desired state of Certificate"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withDescription

```ts
withDescription(description)
```

"A human-readable description of the resource."

### fn spec.forProvider.withLabels

```ts
withLabels(labels)
```

"Set of label tags associated with the Certificate resource.\nNote: This field is non-authoritative, and will only manage the labels present in your configuration.\nPlease refer to the field effective_labels for all of the labels present on the resource."

### fn spec.forProvider.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Set of label tags associated with the Certificate resource.\nNote: This field is non-authoritative, and will only manage the labels present in your configuration.\nPlease refer to the field effective_labels for all of the labels present on the resource."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withLocation

```ts
withLocation(location)
```

"The Certificate Manager location. If not specified, \"global\" is used."

### fn spec.forProvider.withManaged

```ts
withManaged(managed)
```

"Configuration and state of a Managed Certificate.\nCertificate Manager provisions and renews Managed Certificates\nautomatically, for as long as it's authorized to do so.\nStructure is documented below."

### fn spec.forProvider.withManagedMixin

```ts
withManagedMixin(managed)
```

"Configuration and state of a Managed Certificate.\nCertificate Manager provisions and renews Managed Certificates\nautomatically, for as long as it's authorized to do so.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withProject

```ts
withProject(project)
```

"The ID of the project in which the resource belongs.\nIf it is not provided, the provider project is used."

### fn spec.forProvider.withScope

```ts
withScope(scope)
```

"The scope of the certificate.\nDEFAULT: Certificates with default scope are served from core Google data centers.\nIf unsure, choose this option.\nEDGE_CACHE: Certificates with scope EDGE_CACHE are special-purposed certificates, served from Edge Points of Presence.\nSee https://cloud.google.com/vpc/docs/edge-locations.\nALL_REGIONS: Certificates with ALL_REGIONS scope are served from all GCP regions (You can only use ALL_REGIONS with global certs).\nSee https://cloud.google.com/compute/docs/regions-zones"

### fn spec.forProvider.withSelfManaged

```ts
withSelfManaged(selfManaged)
```

"Certificate data for a SelfManaged Certificate.\nSelfManaged Certificates are uploaded by the user. Updating such\ncertificates before they expire remains the user's responsibility.\nStructure is documented below."

### fn spec.forProvider.withSelfManagedMixin

```ts
withSelfManagedMixin(selfManaged)
```

"Certificate data for a SelfManaged Certificate.\nSelfManaged Certificates are uploaded by the user. Updating such\ncertificates before they expire remains the user's responsibility.\nStructure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.managed

"Configuration and state of a Managed Certificate.\nCertificate Manager provisions and renews Managed Certificates\nautomatically, for as long as it's authorized to do so.\nStructure is documented below."

### fn spec.forProvider.managed.withDnsAuthorizations

```ts
withDnsAuthorizations(dnsAuthorizations)
```

"Authorizations that will be used for performing domain authorization. Either issuanceConfig or dnsAuthorizations should be specificed, but not both."

### fn spec.forProvider.managed.withDnsAuthorizationsMixin

```ts
withDnsAuthorizationsMixin(dnsAuthorizations)
```

"Authorizations that will be used for performing domain authorization. Either issuanceConfig or dnsAuthorizations should be specificed, but not both."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.managed.withDomains

```ts
withDomains(domains)
```

"The domains for which a managed SSL certificate will be generated.\nWildcard domains are only supported with DNS challenge resolution"

### fn spec.forProvider.managed.withDomainsMixin

```ts
withDomainsMixin(domains)
```

"The domains for which a managed SSL certificate will be generated.\nWildcard domains are only supported with DNS challenge resolution"

**Note:** This function appends passed data to existing values

### fn spec.forProvider.managed.withIssuanceConfig

```ts
withIssuanceConfig(issuanceConfig)
```

"The resource name for a CertificateIssuanceConfig used to configure private PKI certificates in the format projects//locations//certificateIssuanceConfigs/*.\nIf this field is not set, the certificates will instead be publicly signed as documented at https://cloud.google.com/load-balancing/docs/ssl-certificates/google-managed-certs#caa.\nEither issuanceConfig or dnsAuthorizations should be specificed, but not both."

## obj spec.forProvider.selfManaged

"Certificate data for a SelfManaged Certificate.\nSelfManaged Certificates are uploaded by the user. Updating such\ncertificates before they expire remains the user's responsibility.\nStructure is documented below."

### fn spec.forProvider.selfManaged.withPemCertificate

```ts
withPemCertificate(pemCertificate)
```

"The certificate chain in PEM-encoded form.\nLeaf certificate comes first, followed by intermediate ones if any."

## obj spec.forProvider.selfManaged.certificatePemSecretRef

"The certificate chain in PEM-encoded form.\nLeaf certificate comes first, followed by intermediate ones if any.\nNote: This property is sensitive and will not be displayed in the plan."

### fn spec.forProvider.selfManaged.certificatePemSecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.forProvider.selfManaged.certificatePemSecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.forProvider.selfManaged.certificatePemSecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.forProvider.selfManaged.pemPrivateKeySecretRef

"The private key of the leaf certificate in PEM-encoded form.\nNote: This property is sensitive and will not be displayed in the plan."

### fn spec.forProvider.selfManaged.pemPrivateKeySecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.forProvider.selfManaged.pemPrivateKeySecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.forProvider.selfManaged.pemPrivateKeySecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.forProvider.selfManaged.privateKeyPemSecretRef

"The private key of the leaf certificate in PEM-encoded form.\nNote: This property is sensitive and will not be displayed in the plan."

### fn spec.forProvider.selfManaged.privateKeyPemSecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.forProvider.selfManaged.privateKeyPemSecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.forProvider.selfManaged.privateKeyPemSecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withDescription

```ts
withDescription(description)
```

"A human-readable description of the resource."

### fn spec.initProvider.withLabels

```ts
withLabels(labels)
```

"Set of label tags associated with the Certificate resource.\nNote: This field is non-authoritative, and will only manage the labels present in your configuration.\nPlease refer to the field effective_labels for all of the labels present on the resource."

### fn spec.initProvider.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Set of label tags associated with the Certificate resource.\nNote: This field is non-authoritative, and will only manage the labels present in your configuration.\nPlease refer to the field effective_labels for all of the labels present on the resource."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withManaged

```ts
withManaged(managed)
```

"Configuration and state of a Managed Certificate.\nCertificate Manager provisions and renews Managed Certificates\nautomatically, for as long as it's authorized to do so.\nStructure is documented below."

### fn spec.initProvider.withManagedMixin

```ts
withManagedMixin(managed)
```

"Configuration and state of a Managed Certificate.\nCertificate Manager provisions and renews Managed Certificates\nautomatically, for as long as it's authorized to do so.\nStructure is documented below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withProject

```ts
withProject(project)
```

"The ID of the project in which the resource belongs.\nIf it is not provided, the provider project is used."

### fn spec.initProvider.withScope

```ts
withScope(scope)
```

"The scope of the certificate.\nDEFAULT: Certificates with default scope are served from core Google data centers.\nIf unsure, choose this option.\nEDGE_CACHE: Certificates with scope EDGE_CACHE are special-purposed certificates, served from Edge Points of Presence.\nSee https://cloud.google.com/vpc/docs/edge-locations.\nALL_REGIONS: Certificates with ALL_REGIONS scope are served from all GCP regions (You can only use ALL_REGIONS with global certs).\nSee https://cloud.google.com/compute/docs/regions-zones"

### fn spec.initProvider.withSelfManaged

```ts
withSelfManaged(selfManaged)
```

"Certificate data for a SelfManaged Certificate.\nSelfManaged Certificates are uploaded by the user. Updating such\ncertificates before they expire remains the user's responsibility.\nStructure is documented below."

### fn spec.initProvider.withSelfManagedMixin

```ts
withSelfManagedMixin(selfManaged)
```

"Certificate data for a SelfManaged Certificate.\nSelfManaged Certificates are uploaded by the user. Updating such\ncertificates before they expire remains the user's responsibility.\nStructure is documented below."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.managed

"Configuration and state of a Managed Certificate.\nCertificate Manager provisions and renews Managed Certificates\nautomatically, for as long as it's authorized to do so.\nStructure is documented below."

### fn spec.initProvider.managed.withDnsAuthorizations

```ts
withDnsAuthorizations(dnsAuthorizations)
```

"Authorizations that will be used for performing domain authorization. Either issuanceConfig or dnsAuthorizations should be specificed, but not both."

### fn spec.initProvider.managed.withDnsAuthorizationsMixin

```ts
withDnsAuthorizationsMixin(dnsAuthorizations)
```

"Authorizations that will be used for performing domain authorization. Either issuanceConfig or dnsAuthorizations should be specificed, but not both."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.managed.withDomains

```ts
withDomains(domains)
```

"The domains for which a managed SSL certificate will be generated.\nWildcard domains are only supported with DNS challenge resolution"

### fn spec.initProvider.managed.withDomainsMixin

```ts
withDomainsMixin(domains)
```

"The domains for which a managed SSL certificate will be generated.\nWildcard domains are only supported with DNS challenge resolution"

**Note:** This function appends passed data to existing values

### fn spec.initProvider.managed.withIssuanceConfig

```ts
withIssuanceConfig(issuanceConfig)
```

"The resource name for a CertificateIssuanceConfig used to configure private PKI certificates in the format projects//locations//certificateIssuanceConfigs/*.\nIf this field is not set, the certificates will instead be publicly signed as documented at https://cloud.google.com/load-balancing/docs/ssl-certificates/google-managed-certs#caa.\nEither issuanceConfig or dnsAuthorizations should be specificed, but not both."

## obj spec.initProvider.selfManaged

"Certificate data for a SelfManaged Certificate.\nSelfManaged Certificates are uploaded by the user. Updating such\ncertificates before they expire remains the user's responsibility.\nStructure is documented below."

### fn spec.initProvider.selfManaged.withPemCertificate

```ts
withPemCertificate(pemCertificate)
```

"The certificate chain in PEM-encoded form.\nLeaf certificate comes first, followed by intermediate ones if any."

## obj spec.initProvider.selfManaged.certificatePemSecretRef

"The certificate chain in PEM-encoded form.\nLeaf certificate comes first, followed by intermediate ones if any.\nNote: This property is sensitive and will not be displayed in the plan."

### fn spec.initProvider.selfManaged.certificatePemSecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.initProvider.selfManaged.certificatePemSecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.initProvider.selfManaged.certificatePemSecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.initProvider.selfManaged.pemPrivateKeySecretRef

"The private key of the leaf certificate in PEM-encoded form.\nNote: This property is sensitive and will not be displayed in the plan."

### fn spec.initProvider.selfManaged.pemPrivateKeySecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.initProvider.selfManaged.pemPrivateKeySecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.initProvider.selfManaged.pemPrivateKeySecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.initProvider.selfManaged.privateKeyPemSecretRef

"The private key of the leaf certificate in PEM-encoded form.\nNote: This property is sensitive and will not be displayed in the plan."

### fn spec.initProvider.selfManaged.privateKeyPemSecretRef.withKey

```ts
withKey(key)
```

"The key to select."

### fn spec.initProvider.selfManaged.privateKeyPemSecretRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.initProvider.selfManaged.privateKeyPemSecretRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."